# EHIR

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: python-app.yaml
docs/: book.toml  grammar.rule
docs/pages/: SUMMARY.md  aggregates.md  constants.md  ehir.md  sectors.md
docs/pages/ehir/: project-tree.md
docs/pages/ehir/instructions/: cimp.md
docs/pages/ehir/instructions/binop/: grt.md  ieq.md  leq.md  mul.md  neq.md
docs/pages/instructions/: call.md  cast.md  getf.md  imp.md
docs/pages/instructions/binop/: add.md  geq.md  les.md  sub.md
docs/pages/instructions/control_flow/: br.md
docs/pages/instructions/function/: declare.md  function.md  implement.md
docs/pages/instructions/memory/: caps.md
docs/pages/instructions/structure/: declare.md  implement.md
docs/pages/overview/: encore.md
docs/pages/unsafe/: extern_c.md  unsafe.md
examples/unsafe/: main.ehir
src/compiler/: __init__.py
src/compiler/builder/: __init__.py  lexer.py  parser.py
src/compiler/processor/: __init__.py
src/ehir/: __init__.py
src/ehir/aggregate/: __init__.py  aggregate.py
src/ehir/aggregate/structs/: integer.py
src/ehir/builder/: __init__.py  builder.py
src/ehir/constants/: __init__.py  constant.py
src/ehir/constants/builtin/: integer.py
src/ehir/instructions/: __init__.py  block.py  function.py  instruction.py
src/ehir/instructions/top/: top.py
src/ehir/mod/: __init__.py  header.py  module.py
src/ehir/parser/: __init__.py  parser.py
src/ehir/processor/: __init__.py  processor.py
src/ehir/tree/: __init__.py  tree.py
(+8 files in other folders)
