[project]
name = "ehir"
version = "0.0.1"
description = "Encore High Intermediate Representation"
readme = "README.md"
authors = [
    { name = "Maksim Shushkevich", email = "m.e.shushkevich@yandex.com" }
]
requires-python = ">=3.13"
dependencies = [
    "prologger",
]

[tool.uv.sources]
prologger = { git = "https://github.com/encore-ecosystem/Prologger" }

[project.scripts]
ehir = "compiler:cli_entrypoint"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = [
    "src/ehir",
    "src/compiler",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "ty>=0.0.1a10",
]
